--- a/env/fierlenius.yml
+++ b/env/fierlenius.yml
@@ -1,7 +1,14 @@
 name: fierlenius
 channels:
   - defaults
+  - anaconda
+  - defaults
 dependencies:
   - numpy=1.23.5=py310hd5efca6_0
   - numpy-base=1.23.5=py310h8e6c178_0
   - tqdm=4.64.1=py310h06a4308_0
+  - gensim=4.2.0=py310h6a678d5_0
+  - matplotlib=3.6.2=py310h06a4308_0
+  - matplotlib-base=3.6.2=py310h945d387_0
+  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
+  - plotly=5.9.0=py310h06a4308_0
